core/interpreter/src/test/resources/Interpreter_PP_Classes_TestSuite_External/PP/error/inheritance/rep/reperr-35.vpp.entry
new B().Test() -- = Run-Time Error 208: Class name is not defined